--- a/2324-t3-csopesy-s11-actual-quiz-mo1-process-multiplexer-and-cli/2324-t3-csopesy-s11-actual-quiz-mo1-process-multiplexer-and-cli.vcxproj
+++ b/2324-t3-csopesy-s11-actual-quiz-mo1-process-multiplexer-and-cli/2324-t3-csopesy-s11-actual-quiz-mo1-process-multiplexer-and-cli.vcxproj
@@ -20,6 +20,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Commands.cpp" />
+    <ClCompile Include="Config.cpp" />
+    <ClCompile Include="Config.h" />
     <ClCompile Include="Console.cpp" />
     <ClCompile Include="ConsoleManager.cpp" />
     <ClCompile Include="main.cpp" />
