--- a/2324-t3-csopesy-s11-actual-quiz-mo1-process-multiplexer-and-cli/2324-t3-csopesy-s11-actual-quiz-mo1-process-multiplexer-and-cli.vcxproj.filters
+++ b/2324-t3-csopesy-s11-actual-quiz-mo1-process-multiplexer-and-cli/2324-t3-csopesy-s11-actual-quiz-mo1-process-multiplexer-and-cli.vcxproj.filters
@@ -36,6 +36,12 @@
     <ClCompile Include="Scheduler.cpp">
       <Filter>Sources</Filter>
     </ClCompile>
+    <ClCompile Include="Config.h">
+      <Filter>Headers</Filter>
+    </ClCompile>
+    <ClCompile Include="Config.cpp">
+      <Filter>Sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Commands.h">
