--- a/2324-t3-csopesy-s11-actual-quiz-mo1-process-multiplexer-and-cli/2324-t3-csopesy-s11-actual-quiz-mo1-process-multiplexer-and-cli.vcxproj
+++ b/2324-t3-csopesy-s11-actual-quiz-mo1-process-multiplexer-and-cli/2324-t3-csopesy-s11-actual-quiz-mo1-process-multiplexer-and-cli.vcxproj
@@ -28,7 +28,9 @@
     <ClCompile Include="MarqueeConsole.cpp" />
     <ClCompile Include="MarqueeWorkerThread.cpp" />
     <ClCompile Include="Process.cpp" />
-    <ClCompile Include="Scheduler.cpp" />
+    <ClCompile Include="RRScheduler.cpp" />
+    <ClCompile Include="FCFSScheduler.cpp" />
+    <ClCompile Include="sjf_scheduler.cpp" />
     <ClCompile Include="Thread.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -38,7 +40,9 @@
     <ClInclude Include="MarqueeConsole.h" />
     <ClInclude Include="MarqueeWorkerThread.h" />
     <ClInclude Include="Process.h" />
-    <ClInclude Include="Scheduler.h" />
+    <ClInclude Include="FCFSScheduler.h" />
+    <ClInclude Include="RRScheduler.h" />
+    <ClInclude Include="sjf_scheduler.h" />
     <ClInclude Include="Thread.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
