--- a/2324-t3-csopesy-s11-actual-quiz-mo1-process-multiplexer-and-cli/2324-t3-csopesy-s11-actual-quiz-mo1-process-multiplexer-and-cli.vcxproj
+++ b/2324-t3-csopesy-s11-actual-quiz-mo1-process-multiplexer-and-cli/2324-t3-csopesy-s11-actual-quiz-mo1-process-multiplexer-and-cli.vcxproj
@@ -30,6 +30,7 @@
     <ClCompile Include="Process.cpp" />
     <ClCompile Include="RRScheduler.cpp" />
     <ClCompile Include="FCFSScheduler.cpp" />
+    <ClCompile Include="SJF_Preemptive_Scheduler.cpp" />
     <ClCompile Include="sjf_scheduler.cpp" />
     <ClCompile Include="Thread.cpp" />
   </ItemGroup>
@@ -42,6 +43,7 @@
     <ClInclude Include="Process.h" />
     <ClInclude Include="FCFSScheduler.h" />
     <ClInclude Include="RRScheduler.h" />
+    <ClInclude Include="SJF_Preemptive_Scheduler.h" />
     <ClInclude Include="sjf_scheduler.h" />
     <ClInclude Include="Thread.h" />
   </ItemGroup>
